CHANGES IN VERSION 1.23.1-1.23.6
-------------------------

NEW FEATURES

    o a new function `seqResetVariantID()`


CHANGES IN VERSION 1.22.1-1.22.3
-------------------------

UTILITIES

    o more information in `seqDelete()`

NEW FEATURES

    o a new option 'scenario' in `seqVCF2GDS()` and `seqBCF2GDS()`

BUG FIXES

    o export a haploid VCF file using `seqGDS2VCF()`

    o export VCF without any FORMAT data in `seqGDS2VCF()`

    o export GDS without genotypes in `seqExport()`

    o fix parallel file writing in seqVCF2GDS(), when no genotype


CHANGES IN VERSION 1.22.0
-------------------------

UTILITIES

    o avoid duplicated meta-information lines in `seqVCF2GDS()` and
      `seqVCF_Header()`

    o require >= R_v3.5.0, since reading from connections in text mode is
      buffered

    o `seqDigest()` requires the digest package

    o optimization in reading genotypes from a subset of samples (according to
      gdsfmt_1.17.5)

NEW FEATURES

    o `seqSNP2GDS()` imports dosage GDS files

    o `seqVCF_Header()` allows a BCF file as an input

    o a new function `seqRecompress()`

    o a new function `seqCheck()` for checking the data integrity of a SeqArray
      GDS file

    o `seqGDS2SNP()` exports dosage GDS files

BUG FIXES

    o `seqVCF2GDS()` and `seqVCF_Header()` are able to import site-only VCF
      files (i.e., VCF with no sample)

    o fix `seqVCF2GDS()` and `seqBCF2GDS()` since reading from connections in
      text mode is buffered in R >= v3.5.0


CHANGES IN VERSION 1.20.1
-------------------------

BUG FIXES

    o `seqExport()` fails to export haploid data (e.g., Y chromosome)

    o `seqVCF2GDS()` fails to convert INFO variables when Number="R"


CHANGES IN VERSION 1.20.0
-------------------------

UTILITIES

    o `seqDigest(f, "annotation/filter")` works on a factor variable

    o improve the computational efficiency of `seqMerge()` to avoid genotype
      recompression by padding the 2-bit genotype array in bytes
