@@ -5,6 +5,8 @@ NEW FEATURES
 
     o a new function `seqResetVariantID()`
 
+    o a new option in `seqRecompress(, compress="none")` to uncompress all data
+
 
 CHANGES IN VERSION 1.22.1-1.22.3
 -------------------------
